Modificación para mejoras
agregada validacion tecla enter para agregar el nombre de cada amigo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="input-section">
             <h2 class="section-title">Digite el nombre de sus amigos</h2>
             <div class="input-wrapper">
-                <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
+                <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre" autofocus>
                 <button class="button-add" onclick="agregarAmigo()">Añadir</button>
             </div>
            
@@ -38,7 +38,7 @@
     </main>
 
     <footer class="footer">
-        <p>@2025 Challenge Alura ONE - Edionel Arrias</p>
+        <p>@2025 Alura ONE - Challenge Amigo Secreto. Edionel Arrias</p>
     </footer>
 
     <script src="app.js" defer></script>
